fazer atualizaçao do meu codigo